# growdifgrow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Include/: Irid.cpp  Irid.h  Neighbor.h  ZArray.cpp  ZArray.h
include/: GrowArray.h  Irid.h  Neighbor.h  ZArray.h
src/: CMakeLists.txt  GrowArray.cpp  Irid.cpp  Makefile  Neighbor.cpp  ZArray.cpp  cmake_install.cmake
